--- a/index.html
+++ b/index.html
@@ -1,30 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="images/logo.png" type="image/png">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="css/quiz.css">
-    <title>Тест</title>
+<meta charset="UTF-8">
+<title> Страница </title>
 </head>
+<style type="text/css">
+    body
 
+{
+background: url(2.jpg) 100% no-repeat;
+background-size: cover;
+color: Black;
+text-align: center;
+font-weight: bolder;
+    text-align: center;"
+}
+
+.block
+{
+width: 200px;
+height: 200px;
+background: url(fon3.jpg);
+margin: 0 auto;
+padding: 10px;
+position: relative;
+float: left;
+}
+
+.block img {
+margin: 0 auto;
+display: block;
+height: 175px;
+width: 175px;
+}
+
+</style>
 <body>
-    <div class="container">
-        <div class="site-header"></div>
-        <h1>Какой ты путешественник?</h1>
-        <main>
-            <div class="question"></div>
-            <ul class="answer"></ul>
-        </main>
+<table width="1000" Border= "1" Cellpading ="0" Cellspacing="0" background="1.jpg" align="center">
+    <TR>
+<TH>ЙОЖИКИ</TH>
+<TH>СОБАКИ</TH>
+<TH>БАКЛАНЫ</TH>
+    </TR>
+    <TR>
+        <TD>маленькие</TD>
+        <TD>в меру умные</TD>
+        <TD>упёртые</TD>
+    </TR>
+    <TR>
+        <TD>запуганные</TD>
+        <TD>в меру наглые</TD>
+        <TD>уверенные </TD>
+    </TR>
+    <TR>
+        <TD>но такие жизнерадостные</TD>
+        <TD>в меру воспитанные</TD>
+        <TD>с горящими глазами</TD>
+    </TR>
+</table>
+<H1>Стадии уировцев, по мнению О.Б. Плюща</H1>
 
-    <script src="js/quiz_data.js"></script>
-    <script src="js/quiz_answer.js"></script>
-    <script src="js/quiz_code.js"></script>
-    </div>
+<div>
+    <div class="block"><img src="123.jpg"><p>1 стадия - ЙОЖИКИ. <br /> Ничего не понимают. Сказать ничего не могут (1 курс) </div>
 
+<div class="block"><img src="4OJP.gif"><p>2 стадия - СОБАКИ.  <br />Что-то понимают, но сказать не могут. (2-3 курс)</div>
+
+<div class="block"><img src="kisspng-flightless-bird-penguin-flightless-cormorant-water-bird-5ac11361639f95.4095909415226028494081.png"><p>3 стадия - БАКЛАНЫ. <br /> Всё понимают и умело выражают свои мысли (4 курс)</div>
+
+</div>
 </body>
-
 </html>
