--- a/index.html
+++ b/index.html
@@ -1,217 +1,72 @@
+<!DOCTYPE HTML>
 <html>
 <head>
-<meta content="text/html"; charset="utf-8">
-<title>Страница</title>
-<style>
+<meta charset="UTF-8">
+<title> Страница </title>
+</head>
+<style type="text/css">
+    body
 
-body {
-  background-color: #333;
+{
+background: url(2.jpg) 100% no-repeat;
+background-size: cover;
+color: Black;
+text-align: center;
+font-weight: bolder;
+    text-align: center;"
 }
 
-#container {
-  width: 70vw;
-  margin: 30vw auto;
+.block
+{
+width: 200px;
+height: 200px;
+background: url(fon3.jpg);
+margin: 0 auto;
+padding: 10px;
+position: relative;
+float: left;
 }
 
-h1 {
-  text-align: center;
-  color: #fff;
-  font-size: 5em;
-  letter-spacing: 8px;
-  font-family: 'Press Start 2P';
-  font-weight: 400;
-  /*Create overlap*/
-
-  margin: 0;
-  line-height: 0;
-  /*Animation*/
-
-  animation: glitch1 2.5s infinite;
+.block img {
+margin: 0 auto;
+display: block;
+height: 175px;
+width: 175px;
 }
 
-h1:nth-child(2) {
-  color: #67f3da;
-  animation: glitch2 2.5s infinite;
-}
-
-h1:nth-child(3) {
-  color: #f16f6f;
-  animation: glitch3 2.5s infinite;
-}
-/*Keyframes*/
-
-@keyframes glitch1 {
-  0% {
-    transform: none;
-    opacity: 1;
-  }
-  7% {
-    transform: skew(-0.5deg, -0.9deg);
-    opacity: 0.75;
-  }
-  10% {
-    transform: none;
-    opacity: 1;
-  }
-  27% {
-    transform: none;
-    opacity: 1;
-  }
-  30% {
-    transform: skew(0.8deg, -0.1deg);
-    opacity: 0.75;
-  }
-  35% {
-    transform: none;
-    opacity: 1;
-  }
-  52% {
-    transform: none;
-    opacity: 1;
-  }
-  55% {
-    transform: skew(-1deg, 0.2deg);
-    opacity: 0.75;
-  }
-  50% {
-    transform: none;
-    opacity: 1;
-  }
-  72% {
-    transform: none;
-    opacity: 1;
-  }
-  75% {
-    transform: skew(0.4deg, 1deg);
-    opacity: 0.75;
-  }
-  80% {
-    transform: none;
-    opacity: 1;
-  }
-  100% {
-    transform: none;
-    opacity: 1;
-  }
-}
-
-@keyframes glitch2 {
-  0% {
-    transform: none;
-    opacity: 0.25;
-  }
-  7% {
-    transform: translate(-2px, -3px);
-    opacity: 0.5;
-  }
-  10% {
-    transform: none;
-    opacity: 0.25;
-  }
-  27% {
-    transform: none;
-    opacity: 0.25;
-  }
-  30% {
-    transform: translate(-5px, -2px);
-    opacity: 0.5;
-  }
-  35% {
-    transform: none;
-    opacity: 0.25;
-  }
-  52% {
-    transform: none;
-    opacity: 0.25;
-  }
-  55% {
-    transform: translate(-5px, -1px);
-    opacity: 0.5;
-  }
-  50% {
-    transform: none;
-    opacity: 0.25;
-  }
-  72% {
-    transform: none;
-    opacity: 0.25;
-  }
-  75% {
-    transform: translate(-2px, -6px);
-    opacity: 0.5;
-  }
-  80% {
-    transform: none;
-    opacity: 0.25;
-  }
-  100% {
-    transform: none;
-    opacity: 0.25;
-  }
-}
-
-@keyframes glitch3 {
-  0% {
-    transform: none;
-    opacity: 0.25;
-  }
-  7% {
-    transform: translate(2px, 3px);
-    opacity: 0.5;
-  }
-  10% {
-    transform: none;
-    opacity: 0.25;
-  }
-  27% {
-    transform: none;
-    opacity: 0.25;
-  }
-  30% {
-    transform: translate(5px, 2px);
-    opacity: 0.5;
-  }
-  35% {
-    transform: none;
-    opacity: 0.25;
-  }
-  52% {
-    transform: none;
-    opacity: 0.25;
-  }
-  55% {
-    transform: translate(5px, 1px);
-    opacity: 0.5;
-  }
-  50% {
-    transform: none;
-    opacity: 0.25;
-  }
-  72% {
-    transform: none;
-    opacity: 0.25;
-  }
-  75% {
-    transform: translate(2px, 6px);
-    opacity: 0.5;
-  }
-  80% {
-    transform: none;
-    opacity: 0.25;
-  }
-  100% {
-    transform: none;
-    opacity: 0.25;
-  }
-}
-
-    </style>
-    </head>
+</style>
 <body>
-<div id="container">
-  <h1>GLITCH</h1>
-  <h1>GLITCH</h1>
-  <h1>GLITCH</h1>
+<table width="1000" Border= "1" Cellpading ="0" Cellspacing="0" background="1.jpg" align="center">
+    <TR>
+<TH>ЙОЖИКИ</TH>
+<TH>СОБАКИ</TH>
+<TH>БАКЛАНЫ</TH>
+    </TR>
+    <TR>
+        <TD>маленькие</TD>
+        <TD>в меру умные</TD>
+        <TD>упёртые</TD>
+    </TR>
+    <TR>
+        <TD>запуганные</TD>
+        <TD>в меру наглые</TD>
+        <TD>уверенные </TD>
+    </TR>
+    <TR>
+        <TD>но такие жизнерадостные</TD>
+        <TD>в меру воспитанные</TD>
+        <TD>с горящими глазами</TD>
+    </TR>
+</table>
+<H1>Стадии уировцев, по мнению О.Б. Плюща</H1>
+
+<div>
+    <div class="block"><img src="123.jpg"><p>1 стадия - ЙОЖИКИ. <br /> Ничего не понимают. Сказать ничего не могут (1 курс) </div>
+
+<div class="block"><img src="4OJP.gif"><p>2 стадия - СОБАКИ.  <br />Что-то понимают, но сказать не могут. (2-3 курс)</div>
+
+<div class="block"><img src="kisspng-flightless-bird-penguin-flightless-cormorant-water-bird-5ac11361639f95.4095909415226028494081.png"><p>3 стадия - БАКЛАНЫ. <br /> Всё понимают и умело выражают свои мысли (4 курс)</div>
+
 </div>
 </body>
 </html>
