--- a/index.html
+++ b/index.html
@@ -1,25 +1,74 @@
-<!DOCTYPE HTML>
-<html>
- <head>
- </head>
- <body>
-     <div style="border: dashed 2px #000;
-                 height: 100px;
-                 position: relative;
-                 background-color: #E6E6FA"></div>
-     <div style="border: 5px double #000;
-                 height: 50px;
-                 width: 200px;
-                 position: absolute;
-                 top:30px ;
-                 left:50px;
-                 background-color: #DA70D6"></div>
-     <div style="border: double 5px #000;
-                 height: 50px;
-                 width: 200px;
-                 position: absolute;
-                 top:30px ;
-                 right:50px;
-                 background-color: #7B68EE "></div>
- </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Карина Гринкевич</title>
+      <link rel="stylesheet" href="style.css">
+      <script src="js.js"></script>
+</head>
+<body>
+<section>
+    <img src="ae1A2mQOPrA.jpg" alt="">
+    <article>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </article>
+</section>
+<div1>
+    <div><img src="Eo3gpfnAA5s.jpg" style="position: absolute; /*Абсолютное позиционирование*/
+     left: 100px;
+     top: 40px;
+     width: 300px;
+     height: 200px;
+     border: solid 2px #000;"></div>
+
+     <div><img src="czcmIj4cvSE.jpg" style="position: absolute;
+     left: 550px;
+     top: 40px;
+     width: 300px;
+     height: 200px;
+     border: solid 2px #000;"></div>
+
+     <div><img src="_J7MumAY_x4.jpg" style="position: absolute;
+     left: 60px;
+     top: 280px;
+     width: 400px;
+     height: 550px;
+     border: solid 2px #000;"></div>
+
+     <div><img src="qcXqVUkX05o.jpg" style="position: absolute;
+     left: 535px;
+     top: 260px;
+     width: 400px;
+     height: 550px;
+     border: solid 2px #000;"></div>
+
+     <div style="position: absolute;
+     left: 1000px;
+     top: 40px;
+     border: solid 2px #000;
+     background-color: #FFDEAD ;
+     width: 500px;
+     height: 700px;
+     font-family: Garamond;
+     font-size: 19px;
+     padding: 15px;
+     text-align: justify;"><h1 align="center">Кариночка Гринкевич</h1>
+     <p>Уировская Белоснежка</p>
+     <p1> «Уста алые, как розы. Кудри чёрные, как смоль. Кожа белая, как снег.»  </p1> <br><br>
+    <p2>Именно так описана наша Карина в одноимённой сказке немецких писателей братьев Гримм.
+Белоснежка — невероятно прекрасная юная девушка, обладающая столь невероятной красотой. Несмотря на свою непосредственность и нежный нрав, Белоснежка порой бывает очень напористой. Она хорошо известна за свою доброту и оптимизм — оба эти качества, являясь её самыми сильными сторонами, помогают ей преодолевать различные трудности, с которыми она сталкивается на протяжении всей своей жизни. </p2><br><br>
+ <p3>Кроме того, наша уировская Белоснежка</p3>
+  <ul>
+<li>Невероятна скромна</li>
+<li>И рассудительна</li>
+<li>Решительна</li>
+<li>И сообразительна</li>
+</ul>
+ </div>
+</div1>
+</body>
 </html>
